@@ -74,7 +74,7 @@ extern void mk_shellcmdlist(char *);
 extern void init_shell_escape(void);
 extern int shell_cmd_is_allowed(const char *cmd, char **safecmd,
                                 char **cmdname);
-extern int runsystem(char *cmd);
+extern int runsystem(const char *cmd);
 
 
 #if defined(WIN32) && !defined(__MINGW32__) && defined(DLLPROC)
